terraform-vpc-modules/modules/vpc/main.tf
resource "aws_vpc" "main"{
    cidr_block = var.vpc_cidr
    enable_dns_support = true
    enable_dns_hostnames = true

    tags=  {
        Name = "${var.env}-vpc"
    }

    #lifecycle {
    #  prevent_destroy = true
    #}
}

resource "aws_subnet" "public" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.public_subnet_cidr
    availability_zone = "${var.region}a"
    map_public_ip_on_launch = true
    
    tags = {
      Name = "${var.env}-public-subnet"
    }
  
}

resource "aws_subnet" "private_1" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr_1
    availability_zone = "${var.region}b"

    tags = {
      Name = "${var.env}-private-subnet-1"
    }

}

resource "aws_subnet" "private_2" {
    vpc_id = aws_vpc.main.id
    cidr_block = var.private_subnet_cidr_2
    availability_zone = "${var.region}c"

    tags = {
      Name = "${var.env}-private-subnet-2"
    }
}

resource "aws_internet_gateway" "main" {
    vpc_id = aws_vpc.main.id

    tags = {
        Name = "${var.env}-igw"
    }
  
}

resource "aws_eip" "nat" {
    domain = "vpc"

    tags = {
      Name = "${var.env}-nat-eip"
    }
  
}

resource "aws_nat_gateway" "main" {
    allocation_id = aws_eip.nat.id
    subnet_id = aws_subnet.public.id

    tags = {
        Name = "${var.env}-nat-gw"
    }

    depends_on = [ aws_internet_gateway.main  ]
  
}

resource "aws_route_table" "public" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main.id
    }

    tags = {
        Name = "${var.env}-public-rt"
    }  
}

resource "aws_route_table" "private" {
    vpc_id = aws_vpc.main.id

    route  {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.main.id
    }
  
  tags = {
    Name = "${var.env}-private-rt"
  }
}

resource "aws_route_table_association" "public" {
    subnet_id = aws_subnet.public.id
    route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "private_1" {
    subnet_id = aws_subnet.private_1.id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "private_2" {
  subnet_id = aws_subnet.private_2.id
  route_table_id = aws_route_table.private.id
}
